# misc

gba/jaatelo/: Makefile  Makefile~  README.MD  data_car.c  data_car.c~  data_car.h  data_explosion.c  data_explosion.c~  data_explosion.h  data_explosion2.c  data_explosion2.h  data_explosion3.c  data_explosion3.h  data_font.c  data_font.h  data_missile.c  data_missile.h  data_player.c  data_player.c~  data_player.h~  data_player1.c~  data_player1.h~  jaatelo.c  jaatelo.c~  jaatelo.elf  jaatelo.gba  posprintf.S~  posprintf.h  posprintf.h~
gba/jaatelo/rawdata/: Explosion-anim.pxi  Explosion.pxi  IcecreamTruck.pxi  Pelaaja-2.pxi  Pelaaja-anim.pxi  Pelaaja.pxi  Rengas.pxi  missile.pxi  testi.raw
gba/lgl/: data_default_font.h  debug.c  debug.h  dma.h  error.c  error.h  fonts_bg.h  fonts_common.c  fonts_sprite.c  fonts_sprite.h  input.c  input.h  lgl.h  memory.c  posprintf.S  registers.h  sprites.c  sprites.h  timer.h  typedefs.h
gba/starfield/: README.MD  mode3testi.c  mode3testi.elf  mode3testi.gba
lgl/: Makefile  bg.c  bg.h  color.h  data_default_font.c  fonts_bg.c  fonts_common.h  interrupts.h  macros.h  makedist.sh  memory.h  sound.h  tiles.h  video.h
scripts/: README.MD  clean_desktop.sh
umix-1.0.2/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  libtool
umix-1.0.2/RPM/: umix.spec
umix-1.0.2/debian/: changelog  control  copyright  files  menu  mixer  postinst  postrm  rules
umix-1.0.2/doc/: Makefile  Makefile.am  Makefile.in  README.lyx  desc  umix.1
umix-1.0.2/gentoo/: umix-1.0.2.ebuild
umix-1.0.2/slackware/: umix.build
umix-1.0.2/src/: Makefile  Makefile.am  Makefile.in  driver_dummy.c  driver_dummy.h  driver_oss.c  driver_oss.h  error.c  mixer.c  mixer.h  ui.c  ui.h  ui_ncurses.c  ui_ncurses.h  umix.c  umix_common.c  umix_common.h
