## $Id: Makefile.am,v 1.4 2003/02/09 09:35:44 sakari Exp $
## 
## Process this file with automake to generate Makefile.in
## this file is part of the Umix package, see README for more information

SUBDIRS = doc src 
EXTRA_DIST = autogen.sh RPM/umix.spec debian/changelog debian/control \
	debian/copyright debian/files debian/menu debian/mixer \
	debian/postinst debian/postrm debian/rules debian/substvars \
	slackware/umix.build gentoo/umix-*.ebuild
